--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="styles.css"
 <body>
 <h1>Darshana Shah</h1>
 <p>I'm hosted with GitHub Pages.</p>
